--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.5.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "nodemon": "^3.0.1",
     "snoowrap": "^1.23.0",
     "twit": "^2.2.11"
