--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.3",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -18,6 +19,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "nodemon": "^3.0.1",
+    "react-router-dom": "^6.22.1",
     "snoowrap": "^1.23.0",
     "twit": "^2.2.11"
   }
