--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "nodemon": "^3.0.1",
+    "python-shell": "^5.0.0",
     "react-router-dom": "^6.22.1",
     "snoowrap": "^1.23.0",
     "twit": "^2.2.11"
