--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.3",
-    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.2.0",
     "nodemon": "^3.0.1",
     "python-shell": "^5.0.0",
     "react-router-dom": "^6.22.1",
-    "snoowrap": "^1.23.0",
-    "twit": "^2.2.11"
+    "sinon-chai": "^4.0.0"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^18.0.0"
   }
 }
