--- a/package.json
+++ b/package.json
@@ -14,14 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "python-shell": "^5.0.0",
-    "react-router-dom": "^6.22.1",
-    "sinon-chai": "^4.0.0"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
-    "mocha": "^10.7.0",
-    "proxyquire": "^2.1.3",
-    "sinon": "^18.0.0"
+    "mocha": "^10.7.0"
   }
 }
