--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "prom-client": "^15.1.3",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
