--- a/Deployement/prometheus.yml
+++ b/Deployement/prometheus.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prometheus
+  name: prometheus-deployment
   namespace: default
 spec:
   replicas: 1
@@ -18,9 +18,22 @@ spec:
         image: prom/prometheus:v2.35.0
         args:
           - "--config.file=/etc/prometheus/prometheus.yml"
+          - "--storage.tsdb.path=/prometheus/"
+          - "--web.console.libraries=/etc/prometheus/console_libraries"
+          - "--web.console.templates=/etc/prometheus/consoles"
+          - "--web.enable-lifecycle"
+        ports:
+        - containerPort: 9090
         volumeMounts:
         - name: prometheus-config
           mountPath: /etc/prometheus
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
       volumes:
       - name: prometheus-config
         configMap:
@@ -29,11 +42,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus
+  name: prometheus-service
   namespace: default
 spec:
   ports:
-    - port: 9090
+    - name: prometheus
+      port: 9090
       targetPort: 9090
+      nodePort: 31090
   selector:
     app: prometheus
+  type: NodePort
