--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon start",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "mocha"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "author": "",
   "license": "ISC",
